<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_checkout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.emma.orderitapp.CheckoutActivity">


    <TextView
        style="@style/JavaCafeTextStyle"
        android:id="@+id/title"
        android:text="@string/checkout_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        style="@style/JavaCafeTextStyle"
        android:id="@+id/order_items"
        android:text="@string/order_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <Button
    style="@style/JavaCafeButtonStyle"
    android:id="@+id/sendButton"
    android:text="@string/email_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="sendOrder"
    android:layout_marginBottom="70dp"
    android:layout_alignParentBottom="true" />

    <Button
        style="@style/JavaCafeButtonStyle"
        android:id="@+id/cancelButton"
        android:text="@string/cancel_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startMain"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
